--- a/Server/web/dash_firstB.ejs
+++ b/Server/web/dash_firstB.ejs
@@ -69,18 +69,19 @@
             <div class="GRAPH_container">
                 <div class="order_graph">
                     <h2>Order Graph</h2>
-                    <div id="pendingOrder" style="display:none"><%=pendingOrderList%></div>
+                    <div id="pendingList" style="display:none"><%=pendingOrderList%></div>
+                    <div id="deliveredList" style="display:none"><%=deliveredOrderList%></div>
                     <div id="orderChart-wrapper">
                         <div id="pendingValues"></div>
                         <canvas id="orderChart"></canvas>
                         <div id="mins"></div>
-                        <div id="slopeValues"></div>
                     </div>
                 </div>
                 <!-- order_graph class end -->
                 <div class="time_graph">
                     <h2>Time Graph</h2>
-                    <div id="avgDeliverytime" style="display:none"><%=avgDeliveryTime%></div>
+                    <div id="avgDeliverytimeList" style="display:none"><%=avgDeliveryTimeList%></div>
+                    <div id="downtimeList" style="display:none"><%=downTimeList%></div>
                     <div id="timeChart-wrapper">
                         <div id="times"></div>
                         <canvas id="timeChart"></canvas>
@@ -96,7 +97,7 @@
             </div>	
             <!-- footer class end -->
         </div>
-        <script type="text/javascript" src="battery_script.js">
+        <script type="text/javascript" src="FirstBattery_script.js">
         </script>
         
 	</body>
