--- a/Server/web/part/style/dash_style.css
+++ b/Server/web/part/style/dash_style.css
@@ -78,8 +78,9 @@ span.blueItem{
     background-color:rgb(0,70,42);
 }
 #firstB_time{
-    font-size: 48px;
+    font-size: 42px;
     color:crimson;
+    text-indent:100px;
 }
 #secondB_time{
     font-size: 42px;
