modify for our demo

--- a/Server/web/custWeb_info.ejs
+++ b/Server/web/custWeb_info.ejs
@@ -17,6 +17,8 @@
                         <li class="nav-menu"><a href= "<%= custLink%>" class="nav-link">Check Info</a></li>
                     </ul>
                 </div>
+                <p><%=rows[0]%></p>
+                
                 <div class="content">
                     <h2>Customer Information</h2>
                     <img src="./part/style/person.png" alt='Customer Img' class='fixed' width='180'>
