--- a/Server/web/part/style/dash_style.css
+++ b/Server/web/part/style/dash_style.css
@@ -86,6 +86,10 @@ span.blueItem{
     font-size: 42px;
     color:crimson;
 }
+#item_axis{
+    text-indent:40px;
+    color:rgb(0,70,42);
+}
 /*--------------------------For p Class--------------------------*/
 .info{
     font-size: 40px;
@@ -94,7 +98,7 @@ span.blueItem{
 }
 .battery{
     font-size: 32px;
-    text-indent:150px;
+    /* text-indent:150px; */
 /*    text-align : center;*/
 }
 .time{
@@ -220,18 +224,19 @@ background-color: #004429;
 border-radius: 50%;
 bottom: 20px;
 }
+
 /* x axis for TimeChart */
-#items{
+#minutes{
     margin-left:60px;
 }
-#items>span{
+#minutes>span{
     width: 58px;
     display: inline-block;
     color:#004429;
     font-size:16px;
     margin-left: 25px;
 }
-#items>span:before {
+#minutes>span:before {
 content: '';
 width: 1px;
 height: 5px;
@@ -262,29 +267,6 @@ bottom: 20px;
     border-radius: 50%;
     margin-left: 5px;
 }
-/* y axis for OrderChart */
-#slopeValues{
-    position:absolute;
-    top:0;
-    right:-15px;
-    margin-top:-1px;
-}
-#slopeValues>span{
-    display:block;
-    color:#FF1800;
-    font-size:16px;
-    height:40px;
-    margin-right:-3px;
-}
-#slopeValues>span:before{
-    content: '';
-    width: 4px;
-    height: 1px;
-    position:absolute;
-    background-color: #FF1800;
-    border-radius:50%;
-    margin-left: -3px;
-}
 /* y axis for TimeChart */
 #times{
     position:absolute;
@@ -297,15 +279,16 @@ bottom: 20px;
     color:#004429;
     font-size:16px;
     height:40px;
+    text-align: left;
 }
 #times>span:after {
-content: '';
-width: 4px;
-height: 1px;
-position: absolute;
-background-color: #004429;
-border-radius: 50%;
-margin-left: 5px;
+    content: '';
+    width: 4px;
+    height: 1px;
+    position: absolute;
+    background-color: #004429;
+    border-radius: 50%;
+    margin-left: 10px;
 }
 /*--------------------------For font--------------------------*/
 @font-face {
