make legend for all pages

--- a/Server/web/custWeb_info.ejs
+++ b/Server/web/custWeb_info.ejs
@@ -1,7 +1,8 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html>
 	<head>
-		<title>Customer Site</title>
+        <meta name="viewport" content="width=device-width, user-scalable=no">
+        <title>Customer Site</title>
 		<link href="./part/style/custWeb_style.css" type="text/css" rel="stylesheet"/>
         <link rel="shortcut icon" href="./part/style/favicon.ico">
 	</head>
@@ -17,8 +18,6 @@
                         <li class="nav-menu"><a href= "<%= custLink%>" class="nav-link">Check Info</a></li>
                     </ul>
                 </div>
-                <p><%=rows[0]%></p>
-                
                 <div class="content">
                     <h2>Customer Information</h2>
                     <img src="./part/style/person.png" alt='Customer Img' class='fixed' width='180'>
