--- a/Server/web/dash_firstB.ejs
+++ b/Server/web/dash_firstB.ejs
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <meta http-equiv="refresh" content="30;">
+        <!-- <meta http-equiv="refresh" content="1;"> -->
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Dash Board (First BATTERY)</title>
         <link href="./part/style/dash_style.css" type="text/css" rel="stylesheet"/>
@@ -76,6 +76,7 @@
                         <canvas id="orderChart"></canvas>
                         <div id="mins"></div>
                     </div>
+                    <img src="./part/style/order_legend.png" id="order_legend">
                 </div>
                 <!-- order_graph class end -->
                 <div class="time_graph">
@@ -87,6 +88,7 @@
                         <canvas id="timeChart"></canvas>
                         <div id="minutes"></div>
                     </div>
+                    <img src="./part/style/time_legend.png" id="time_legend">
                 </div>
                 <!-- time_graph class end -->
             </div>
