--- a/Server/web/dash_secondB.ejs
+++ b/Server/web/dash_secondB.ejs
@@ -69,9 +69,8 @@
                         <div id="pendingValues"></div>
                         <canvas id="orderChart"></canvas>
                         <div id="mins"></div>
-                        <div id="slopeValues"></div>
-                        
                     </div>
+                    <img src="./part/style/order_legend.png" id="order_legend">
                 </div>
                 <!-- order_graph class end -->
                 <div class="time_graph">
@@ -81,8 +80,9 @@
                     <div id="timeChart-wrapper">
                         <div id="times"></div>
                         <canvas id="timeChart"></canvas>
-                        <div id="items"></div>
+                        <div id="minutes"></div>
                     </div>
+                    <img src="./part/style/time_legend.png" id="time_legend">
                 </div>
                 <!-- time_graph class end -->
             </div>
