--- a/Server/web/custWeb_login.ejs
+++ b/Server/web/custWeb_login.ejs
@@ -2,7 +2,8 @@
 <html>
 	<head>
         <meta charset='utf-8'>
-		<title>Customer Site</title>
+        <meta name="viewport" content="width=device-width, user-scalable=no">
+        <title>Customer Site</title>
 		<link href="./part/style/custWeb_style.css" type="text/css" rel="stylesheet" />
         <link rel="shortcut icon" href="./part/style/favicon.ico">
 	</head>
