--- a/Server/web/dashboard/dash_secondB.ejs
+++ b/Server/web/dashboard/dash_secondB.ejs
@@ -5,7 +5,7 @@
         <meta http-equiv="refresh" content="2;">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Dash Board (Second BATTERY)</title>
-        <link href="./part/style/dash_style.css" type="text/css" rel="stylesheet"/>
+        <link href="./dashboard/dash_style.css" type="text/css" rel="stylesheet"/>
         <link rel="shortcut icon" href="./part/style/favicon.ico">
         <script type="text/javascript" src="http://code.jquery.com/jquery-1.10.1.min.js"></script>
     </head>
@@ -93,7 +93,7 @@
             </div>	
             <!-- footer class end -->
         </div>
-        <script type="text/javascript" src="SecondBattery_script.js">
+        <script type="text/javascript" src="./dashboard/SecondBattery_script.js">
         </script>
         
 	</body>
