--- a/Server/web/custWeb/custWeb_style.css
+++ b/Server/web/custWeb/custWeb_style.css
@@ -1,9 +1,10 @@
 h1{
     font-family: pacificoregular;
-	font-size: 56px;
+	font-size: 40px;
 	font-weight: normal;
 	color: ghostwhite;
-    text-align: center;
+    text-align: left;
+    /* text-indent: 80px; */
     margin :10px;
 }
 h2{
@@ -16,7 +17,65 @@ p{
     font-family: Noco_sans;
     font-size: 36px;
 }
+body{
+    margin:-5px 0px 0px;
+    border:0px;
+    padding:0px;
+}
+@media screen and (max-height:450px){
+    .sidenav {padding-top: 15px;}
+    .sidenav a {font-size: 18px;}
+}
+/*--------------------------For Side Nav-------------------------*/
+.sidenav {
+    height: 100%;
+    width: 0;
+    position: fixed;
+    z-index: 1;
+    top: 0;
+    left: 0;
+    background-color: #d59096;
+    opacity: 0.8;
+    /* background: linear-gradient( #d59096 50%, lightgrey 50%); */
+    overflow-x: hidden;
+    transition: 0.5s;
+    padding-top: 60px;
+}
+
+.sidenav a {
+    padding: 8px 8px 8px 32px;
+    text-decoration: none;
+    font-size: 25px;
+    color: white;
+    display: block;
+    transition: 0.3s;
+}
+
+.sidenav a:hover {
+    color: #a26268;
+    background-color: #ffc1c7;
+}
+
+.sidenav .closebtn {
+    position: absolute;
+    top: 0;
+    right: 25px;
+    font-size: 36px;
+    /* margin-left: 50px; */
+}
+#menubar{
+    margin: 20px 10px 0px;
+}
+
 /*--------------------------For input Class--------------------------*/
+#search{
+    font-size: 20px;
+    padding: 10px;
+}
+.search{
+    float: right;
+    margin: 20px 10px 0px;
+}
 img.fixed{
 	position:scroll;
 	float: left;
@@ -63,16 +122,24 @@ input.button:hover{
 }
 /*--------------------------For div Class--------------------------*/
 .frame{
-    width: 2530px;
+    width: 100%;
     height: 1200px;
+    margin:0px;
 }
 .title{
 	width:100%;
-	height:10%;
+	height:8%;
 	background-color: rgb(0,70,42);
-	float:top;
-    margin-bottom: 20px;
-    border:8px solid #001f00;
+    float:top;
+    border: 0px;
+    /* margin-bottom: 20px;
+    border:8px solid #001f00; */
+}
+.menubar{
+    float:left;
+}
+.page_name{
+    float:left;
 }
 .container{
     width:100%;
@@ -131,15 +198,17 @@ input.button:hover{
 /*--------------------------For font--------------------------*/
 @font-face {
     font-family: 'pacificoregular';
-    src: url('../style/pacifico_font/pacifico-webfont.woff2') format('woff2'),
-         url('../style/pacifico_font/pacifico-webfont.woff') format('woff');
+    src: url('../part/style/pacifico_font/pacifico-webfont.woff2') format('woff2'),
+         url('../part/style/pacifico_font/pacifico-webfont.woff') format('woff');
     font-weight: normal;
     font-style: normal;
 }
 @font-face {
     font-family: 'Noco_sans';
-    src: url('../style/Noco_Sans/notosans-regular-webfont.woff2') format('woff2'),
-         url('../style/Noco_Sans/notosans-regular-webfont.woff') format('woff');
+    src: url('../part/style/Noco_Sans/notosans-regular-webfont.woff2') format('woff2'),
+         url('../part/style/Noco_Sans/notosans-regular-webfont.woff') format('woff');
     font-weight: normal;
     font-style: normal;
 }
+
+/*  */
