make another axis for time graph

--- a/Server/web/dashboard/dash_firstB.ejs
+++ b/Server/web/dashboard/dash_firstB.ejs
@@ -87,6 +87,7 @@
                         <div id="times"></div>
                         <canvas id="timeChart"></canvas>
                         <div id="minutes"></div>
+                        <div id="downs"></div>
                     </div>
                     <img src="./part/style/time_legend.png" id="time_legend">
                 </div>
