modify time graph perfect

--- a/Server/web/dashboard/dash_secondB.ejs
+++ b/Server/web/dashboard/dash_secondB.ejs
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <meta http-equiv="refresh" content="2;">
+        <meta http-equiv="refresh" content="1;">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Dash Board (Second BATTERY)</title>
         <link href="./dashboard/dash_style.css" type="text/css" rel="stylesheet"/>
@@ -81,6 +81,7 @@
                         <div id="times"></div>
                         <canvas id="timeChart"></canvas>
                         <div id="minutes"></div>
+                        <div id="downs"></div>
                     </div>
                     <img src="./part/style/time_legend.png" id="time_legend">
                 </div>
