--- a/Server/web/dashboard/dashboard.ejs
+++ b/Server/web/dashboard/dashboard.ejs
@@ -21,7 +21,7 @@
                 <div class="main_Order">
                     <h2>Order</h2>
                     <p class="info">Total Order : <span class="total" id="totalorder" ><%= totalOrders %></span></p>
-                    <p class="info">Throughput : <span class="throughput"><%= deliveredOrders %></span></p>
+                    <p class="info">Complete Orders : <span class="throughput"><%= deliveredOrders %></span></p>
                     <p class="info">Backlog : <span class="backlog"><%= pendingOrders %></span></p>
                     <p class="info" id="highBacklog"></p>
 <!--                    <div id="total_order"></div>    -->
@@ -83,6 +83,7 @@
                         <div id="times"></div>
                         <canvas id="timeChart"></canvas>
                         <div id="minutes"></div>
+                        <div id="downs"></div>
                     </div>
                     <img src="./part/style/time_legend.png" id="time_legend">
                 </div>
