make customer page

--- a/Server/web/custWeb/custWeb_basic.ejs
+++ b/Server/web/custWeb/custWeb_basic.ejs
@@ -2,9 +2,10 @@
 <html>
 	<head>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Customer Site</title>
+        <title>RobertoClemente</title>
 		<link href="./custWeb_style.css" type="text/css" rel="stylesheet"/>
         <link rel="shortcut icon" href="../part/style/favicon.ico">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <script type="text/javascript" src="http://code.jquery.com/jquery-1.10.1.min.js"></script>
 	</head>
 	<body>
@@ -15,14 +16,33 @@
             <a href="<%= loginLink%>">Login</a>
             <a href="<%= custLink%>">My Order</a>
         </div>
-        <!-- <h2>Animated Sidenav Example</h2> -->
-        <!-- <p>Click on the element below to open the side navigation menu.</p> -->
         
         <div class="frame">
             <div class="title">
                 <span class="menubar" id="menubar" style="font-size:30px; cursor:pointer; color: white" onclick="openNav()">&#9776;</span>
                 <h1 class="page_name">Roberto Clemente</h1>
-                <button class="search" id="search">SEARCH</button><input id = "search" class="search" placeholder="Search...">
+                <button class="btn_search" id="search"><i class="fa fa-search"></i></button><input id = "search" class="search" placeholder="Search...">
+            </div>
+            <div class="slideshow">
+                <div class="mySlides fade">
+                    <div class="numbertext">1 / 3</div>
+                    <img src="../part/style/dobby_hands.jpg" style="width:100%">
+                    <div class="text">Caption Text</div>
+                </div>
+                <div class="mySlides fade">
+                    <div class="numbertext">2 / 3</div>
+                    <img src="../part/style/baby_dobby.png" style="width:100%">
+                    <div class="text">Caption Two</div>
+                </div>
+                <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+                <a class="next" onclick="plusSlides(1)">&#10095;</a>
+            </div>
+            <div style="text-align:center">
+                <span class="dot" onclick="currentSlide(1)"></span>
+                <span class="dot" onclick="currentSlide(2)"></span>
+            </div>
+            <div class="footer">
+                <p class="copyright">&copy;Roberto Clemente</p>
             </div>
         </div>
         <script type="text/javascript" src="./custWeb_script.js">
