--- a/Server/web/custWeb/custWeb_info.ejs
+++ b/Server/web/custWeb/custWeb_info.ejs
@@ -5,27 +5,25 @@
         <title>Customer Site</title>
 		<link href="../custWeb/custWeb_style.css" type="text/css" rel="stylesheet"/>
         <link rel="shortcut icon" href="../part/style/favicon.ico">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <script type="text/javascript" src="http://code.jquery.com/jquery-1.10.1.min.js"></script>
 	</head>
 	<body>
         <div id="mySidenav" class="sidenav">
-            <a href =:"javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+            <a href ="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+            <br/>
+            <br/>
             <a href="<%= loginLink%>">Login</a>
-            <a href="<%= custLink%>">Check Info</a>
+            <a href="<%= custLink%>">My Order</a>
         </div>
         <div class="frame">
             <div class="title">
-                <h1>Roberto Clemente</h1>
+                <span class="menubar" id="menubar" style="font-size:30px; cursor:pointer; color: white" onclick="openNav()">&#9776;</span>
+                <h1 class="page_name">Roberto Clemente</h1>
+                <button class="btn_search" id="search"><i class="fa fa-search"></i></button><input id = "search" class="search" placeholder="Search...">
             </div>
             <!-- title class end -->
             <div class="container">
-                <div class="nav">
-                    <ul class = "nav-list">
-                        <li class="nav-menu"><a href= "<%= loginLink%>" class="nav-link">Login</a></li>
-                        <li class="nav-menu"><a href= "<%= custLink%>" class="nav-link">Check Info</a></li>
-                    </ul>
-                </div>
-                <!-- nav class end -->
                 <div class="content">
                     <h2>Customer Information</h2>
                     <img src="../part/style/person.png" alt='Customer Img' class='fixed' width='180'>
@@ -50,6 +48,8 @@
             <!-- footer class end -->
         </div>
         <!-- frame class end -->
+        <script type="text/javascript" src="../custWeb/custWeb_script.js">
+        </script>
         <script>
             function openNav(){
                 document.getElementById('mySidenav').style.width="250px";
@@ -64,7 +64,6 @@
             }else{
                 $('#orderProcess').text('Order Delivered!')
             }
-
         </script>
 	</body>
 </html>
