--- a/Server/web/custWeb/custWeb_login.ejs
+++ b/Server/web/custWeb/custWeb_login.ejs
@@ -1,24 +1,29 @@
 <!DOCTYPE html>
 <html>
 	<head>
-        <meta charset='utf-8'>
-        <meta name="viewport" content="width=device-width, user-scalable=no">
-        <title>Customer Site</title>
-		<link href="./part/style/custWeb_style.css" type="text/css" rel="stylesheet" />
-        <link rel="shortcut icon" href="./part/style/favicon.ico">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Login</title>
+		<link href="../custWeb/custWeb_style.css" type="text/css" rel="stylesheet" />
+        <link rel="shortcut icon" href="../part/style/favicon.ico">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+        <script type="text/javascript" src="http://code.jquery.com/jquery-1.10.1.min.js"></script>
 	</head>
 	<body>
+        <div id="mySidenav" class="sidenav">
+            <a href ="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+            <br/>
+            <br/>
+            <a href="<%= loginLink%>">Login</a>
+            <a href="<%= custLink%>">My Order</a>
+        </div>
+
         <div class="frame">
             <div class="title">
-                <h1>Roberto Clemente</h1>
+                <span class="menubar" id="menubar" style="font-size:30px; cursor:pointer; color: white" onclick="openNav()">&#9776;</span>
+                <h1 class="page_name">Roberto Clemente</h1>
+                <button class="btn_search" id="search"><i class="fa fa-search"></i></button><input id = "search" class="search" placeholder="Search...">
             </div>
             <div class="container">
-                <div class="nav">
-                    <ul class = "nav-list">
-                        <li class="nav-menu"><a href= "<%= loginLink %>" class="nav-link">Login</a></li>
-                        <li class="nav-menu"><a href= "<%= custLink %>" class="nav-link">Check Info</a></li>
-                    </ul>
-                </div>
                 <div class="content">
                     <h2>Login</h2>
                     <div class="login">
@@ -34,5 +39,7 @@
                 <p class="copyright">&copy;Roberto Clemente</p>
             </div>
         </div>
+        <script type="text/javascript" src="../custWeb/custWeb_script.js">
+        </script>
 	</body>
 </html>
