--- a/Server/web/custWeb/custWeb_style.css
+++ b/Server/web/custWeb/custWeb_style.css
@@ -67,14 +67,113 @@ body{
     margin: 20px 10px 0px;
 }
 
+/*--------------------------For Slide show-------------------------*/
+* {box-sizing: border-box}
+
+.slideshow{
+    /* max-width: 1000px; */
+    position:relative;
+    margin: auto;
+}
+.mySlides{
+    display:none;
+}
+.prev, .next{
+    cursor: pointer;
+    position: absolute;
+    top: 50%;
+    width: auto;
+    margin-top: -22px;
+    padding: 16px;
+    color: white;
+    font-weight: bold;
+    font-size: 18px;
+    transition: 0.6s ease;
+    border-radius: 0 3px 3px 0;
+    user-select: none;
+}
+.next{
+    right:0;
+    border-radius: 3px 0 0 3px;
+}
+.prev:hover, .next:hover{
+    background-color: rgba(0, 0, 0, 0.8);
+}
+.text{
+    color: #f2f2f2;
+    font-size: 15px;
+    padding: 8px 12px;
+    position: absolute;
+    bottom: 8px;
+    width: 100%;
+    text-align: center;
+}
+.numbertext{
+    color: #f2f2f2;
+    font-size: 12px;
+    padding: 8px 12px;
+    position: absolute;
+    top: 0;
+}
+.dot {
+    cursor: pointer;
+    height: 15px;
+    width: 15px;
+    margin: 0 2px;
+    background-color: #bbb;
+    border-radius: 50%;
+    display: inline-block;
+    transition: background-color 0.6s ease;
+  }
+  
+  .active, .dot:hover {
+    background-color: #717171;
+  }
+  
+  /* Fading animation */
+  .fade {
+    -webkit-animation-name: fade;
+    -webkit-animation-duration: 1.5s;
+    animation-name: fade;
+    animation-duration: 1.5s;
+  }
+  
+  @-webkit-keyframes fade {
+    from {opacity: .4}
+    to {opacity: 1}
+  }
+  
+  @keyframes fade {
+    from {opacity: .4}
+    to {opacity: 1}
+  }
 /*--------------------------For input Class--------------------------*/
 #search{
     font-size: 20px;
     padding: 10px;
+    cursor: pointer;
 }
 .search{
     float: right;
-    margin: 20px 10px 0px;
+    margin: 25px 0px 0px;
+    padding: 6px;
+    /* margin-top: 8px; */
+    /* font-size: 17px; */
+    border: none;
+}
+.btn_search{
+    float: right;
+    padding: 6px 10px;
+    margin: 25px 10px 0px 0px;
+    /* margin-top: 8px; */
+    /* margin-right: 16px; */
+    background: #ffc1c7;
+    font-size: 17px;
+    border: none;
+    cursor: pointer;
+}
+.btn_search:hover{
+    background-color: #d59096; 
 }
 img.fixed{
 	position:scroll;
