--- a/Server/web/custWeb/custWeb_basic.ejs
+++ b/Server/web/custWeb/custWeb_basic.ejs
@@ -13,6 +13,7 @@
             <a href ="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
             <br/>
             <br/>
+            <a href="<%= itemLink%>">Items</a>
             <a href="<%= loginLink%>">Login</a>
             <a href="<%= custLink%>">My Order</a>
         </div>
@@ -20,19 +21,24 @@
         <div class="frame">
             <div class="title">
                 <span class="menubar" id="menubar" style="font-size:30px; cursor:pointer; color: white" onclick="openNav()">&#9776;</span>
-                <h1 class="page_name">Roberto Clemente</h1>
+                <h1 class="page_name"><a href="<%= basicLink%>">Roberto Clemente</a></h1>
                 <button class="btn_search" id="search"><i class="fa fa-search"></i></button><input id = "search" class="search" placeholder="Search...">
             </div>
             <div class="slideshow">
                 <div class="mySlides fade">
                     <div class="numbertext">1 / 3</div>
                     <img src="../part/style/dobby_hands.jpg" style="width:100%">
-                    <div class="text">Caption Text</div>
+                    <div class="text"></div>
                 </div>
                 <div class="mySlides fade">
                     <div class="numbertext">2 / 3</div>
                     <img src="../part/style/baby_dobby.png" style="width:100%">
-                    <div class="text">Caption Two</div>
+                    <div class="text"></div>
+                </div>
+                <div class="mySlides fade">
+                    <div class="numbertext">3 / 3</div>
+                    <img src="../part/style/robot.png" style="width:100%">
+                    <div class="text"></div>
                 </div>
                 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
                 <a class="next" onclick="plusSlides(1)">&#10095;</a>
