--- a/Server/web/custWeb/custWeb_info.ejs
+++ b/Server/web/custWeb/custWeb_info.ejs
@@ -13,32 +13,44 @@
             <a href ="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
             <br/>
             <br/>
+            <a href="<%= itemLink%>">Items</a>
             <a href="<%= loginLink%>">Login</a>
             <a href="<%= custLink%>">My Order</a>
         </div>
         <div class="frame">
             <div class="title">
                 <span class="menubar" id="menubar" style="font-size:30px; cursor:pointer; color: white" onclick="openNav()">&#9776;</span>
-                <h1 class="page_name">Roberto Clemente</h1>
+                <h1 class="page_name"><a href="<%= basicLink%>">Roberto Clemente</a></h1>
                 <button class="btn_search" id="search"><i class="fa fa-search"></i></button><input id = "search" class="search" placeholder="Search...">
             </div>
             <!-- title class end -->
             <div class="container">
-                <div class="content">
-                    <h2>Customer Information</h2>
-                    <img src="../part/style/person.png" alt='Customer Img' class='fixed' width='180'>
-                    <div class="info">
-                        <br/>
-                        <p id="ID">ID : <%=rows[0].id%></p>
-                        <p id="orderDate">Order Date : <%=rows[0].orderdate%></p>
-                        <p id="orderItems">Ordered Item : R - <%=rows[0].red%> G - <%=rows[0].green%> B - <%=rows[0].blue%></p>
-                        <p id="custAddress">Customer Address : <%=rows[0].address%></p>
-                        <p id="getorderProcess" style="display: none;"><%=rows[0].pending%></p>
-                        <p>Order Process : <span id="orderProcess"></span></p>
-                        <input type="button" name="btn1" value="Cancel Item" class="button">
+                <h2>Customer Information</h2>
+                    <div class="info_content">
+                        <img src="../part/style/person.png" alt='Customer Img' class='fixed' width='8%'>
+                        <div class="t_info">
+                            <br/>
+                            <p id="t_name">Name </p>
+                            <p id="t_ID">ID </p>
+                            <p id="t_orderDate">Order Date </p>
+                            <p id="t_orderItems">Ordered Item </p>
+                            <p id="t_custAddress">Customer Address </p>
+                            <p id="getorderProcess" style="display: none;"><%=rows[0].pending%></p>
+                            <p id="t_orderProcess">Order Process </p>
+                        </div>
+                        <div class="info">
+                            <br/>
+                            <p id="name"><%=rows[0].customer%></p>
+                            <p id="ID"><%=rows[0].id%></p>
+                            <p id="getorderDate" style="display:none;"><%=rows[0].orderdate%></p>
+                            <p id="orderDate"></p>
+                            <p id="orderItems">R : <span id="orderItem_red" style="color:red"><%=rows[0].red%></span> G : <span id="orderItem_green" style="color:green"><%=rows[0].green%></span>  B : <span id="orderItem_blue" style="color:blue"><%=rows[0].blue%></span></p>
+                            <p id="custAddress"><%=rows[0].address%></span></p>
+                            <p id="orderProcess"></p>
+                            <input type="button" name="btn1" value="Cancel Item" class="button">
+                        </div>
+                        <!-- info class end -->
                     </div>
-                    <!-- info class end -->
-                </div>
                 <!-- content class end -->
             </div>
             <!-- container class end -->
@@ -64,6 +76,14 @@
             }else{
                 $('#orderProcess').text('Order Delivered!')
             }
+            var getDate = document.getElementById('getorderDate').innerHTML;
+            console.log(getDate);
+            getDate = getDate.split(" ");
+            console.log(getDate);
+            var orderDate = '';
+            orderDate = orderDate.concat(getDate[1], ', ', getDate[2], ', ', getDate[3]);
+            $('#orderDate').text(orderDate);
+
         </script>
 	</body>
 </html>
