--- a/Server/web/custWeb/custWeb_login.ejs
+++ b/Server/web/custWeb/custWeb_login.ejs
@@ -13,6 +13,7 @@
             <a href ="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
             <br/>
             <br/>
+            <a href="<%= itemLink%>">Items</a>
             <a href="<%= loginLink%>">Login</a>
             <a href="<%= custLink%>">My Order</a>
         </div>
@@ -20,7 +21,7 @@
         <div class="frame">
             <div class="title">
                 <span class="menubar" id="menubar" style="font-size:30px; cursor:pointer; color: white" onclick="openNav()">&#9776;</span>
-                <h1 class="page_name">Roberto Clemente</h1>
+                <h1 class="page_name"><a href="<%= basicLink%>">Roberto Clemente</a></h1>
                 <button class="btn_search" id="search"><i class="fa fa-search"></i></button><input id = "search" class="search" placeholder="Search...">
             </div>
             <div class="container">
