--- a/Server/web/custWeb/custWeb_login.ejs
+++ b/Server/web/custWeb/custWeb_login.ejs
@@ -30,7 +30,7 @@
                     <div class="login">
                         <form action="/custInfo" method="POST">
                             <label for="loginId" id="loginId">ID</label>
-                            <input type="text" id="loginId" name="loginId" placeholder="ID">
+                            <input type="text" id="loginId_input" name="loginId" placeholder="Enter ID">
                             <button type="submit" class="btn_login"  disable> Login</button>
                         </form>
                     </div>
