--- a/Server/web/dashboard/dash_firstB.ejs
+++ b/Server/web/dashboard/dash_firstB.ejs
@@ -24,7 +24,7 @@
                     <h2>Order</h2>
                     <p class="info">Total Order : <span class="total" id="totalorder" ><%= totalOrders %></span></p>
                     <p class="info">Complete Orders : <span class="throughput"><%= deliveredOrders %></span></p>
-                    <p class="info">Backlog : <span class="backlog"><%= pendingOrders %></span></p>
+                    <p class="info">Backlog : <span class="backlog" id="backlog"><%= pendingOrders %></span></p>
                     <p class="info" id="highBacklog"></p>
                     <!-- <p class="info">Backlog Items : <span class="backlog"><%= pendingItems%></span></p> -->
 			     </div>
