--- a/Server/web/custWeb/custWeb_info.ejs
+++ b/Server/web/custWeb/custWeb_info.ejs
@@ -31,7 +31,7 @@
                         <div class="t_info">
                             <br/>
                             <p id="t_name">Name </p>
-                            <p id="t_ID">ID </p>
+                            <p id="t_ID">Order ID </p>
                             <p id="t_orderDate">Order Date </p>
                             <p id="t_orderItems">Ordered Item </p>
                             <p id="t_custAddress">Customer Address </p>
