--- a/Server/web/dashboard/dash_secondB.ejs
+++ b/Server/web/dashboard/dash_secondB.ejs
@@ -23,7 +23,7 @@
                     <h2>Order</h2>
                     <p class="info">Total Order : <span class="total" id="totalorder" ><%= totalOrders %></span></p>
                     <p class="info">Complete Orders : <span class="throughput"><%= deliveredOrders %></span></p>
-                    <p class="info">Backlog : <span class="backlog"><%= pendingOrders %></span></p>
+                    <p class="info">Backlog : <span class="backlog" id="backlog"><%= pendingOrders %></span></p>
                     <p class="info" id="highBacklog"></p>
 			     </div>
                 <!-- Order class end -->
